testsuite/bad/bad039.jl
int =(){ return 1; }

int main() { return 1; }
